--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,8 @@
 <body>
     <div class="main-content">
     {{>headers}}
+    <p>This site was created by Manoj Khatri. It uses data from mapbox.com and weather-stack API to fetch local API data</p>
+    <p>Behind the scenes Geo coding service provided by map-box is used to convert the location user provides to latitude and longitude pair</p>
     <img class="portrait" src="/img/me.jpg">
     </div>
      <p1>{{>footers}}</p1>
