Fixed Front end

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,6 +10,14 @@
     <div class="main-content">
         {{>headers}}
         <p>Use this site to get your weather</p>
+        <p>In the field requiring address, following are the valid options <br>
+            -Physical address<br>
+            -Zip code <br>
+            -Country<br>
+            -State<br>
+            -City<br>
+            -Location Name such as (Resturants, parks etc)
+        </p>
 
         <form>
             <input placeholder="Enter Address">
